# atlassian-cookie-mcp

./: .gitignore  AGENT_USAGE.md  CLAUDE.md  README.md  SECURITY.md  atlassian-cli  atlassian-native-host  atlassian_browser_auth.py  atlassian_browser_mcp_full.py  atlassian_cli.py  atlassian_cookie_import.py  atlassian_native_host.py  cookie_autoauth.py  cookie_harvest.py  preflight.sh  pyproject.toml  run-atlassian-browser-mcp.sh
.github/workflows/: stale.yml  track-upstream.yml
chrome-extension/: README.md  background.js  manifest.json  popup.html  popup.js  shared.js
tests/: test_cli_import.py  test_confluence_url.py  test_cookie_autoauth.py  test_cookie_harvest.py  test_native_host.py  test_run_script_env.py
