[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-browser-mcp"
version = "1.0.2"
description = "Browser-backed MCP server wrapping upstream mcp-atlassian with Playwright SSO auth"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [{ name = "GeiserX" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp-atlassian>=0.21.1,<1.0.0",
    "playwright>=1.58.0",
    "requests>=2.33.1",
]

[project.urls]
Homepage = "https://github.com/GeiserX/atlassian-browser-mcp"
Repository = "https://github.com/GeiserX/atlassian-browser-mcp"
Issues = "https://github.com/GeiserX/atlassian-browser-mcp/issues"

[project.scripts]
atlassian-browser-mcp = "atlassian_browser_mcp_full:main"

[tool.setuptools]
py-modules = ["atlassian_browser_auth", "atlassian_browser_mcp_full"]
