[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-browser-mcp"
version = "1.2.0"
description = "Browser-cookie MCP server wrapping upstream mcp-atlassian; cookies captured via a Chrome extension"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [{ name = "GeiserX" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp-atlassian>=0.21.1,<1.0.0",
    "requests>=2.33.1",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/GeiserX/atlassian-browser-mcp"
Repository = "https://github.com/GeiserX/atlassian-browser-mcp"
Issues = "https://github.com/GeiserX/atlassian-browser-mcp/issues"

[project.scripts]
atlassian-browser-mcp = "atlassian_browser_mcp_full:main"

[tool.setuptools]
py-modules = [
    "atlassian_browser_auth",
    "atlassian_browser_mcp_full",
    "atlassian_cookie_import",
    "atlassian_native_host",
    "atlassian_cli",
]
